[package]
name = "choosen"
version = "0.0.1"
authors = ["huangjj27 <huangjj.27@qq.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "An easy program that choose some attending person, with equal properbility for each position."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reservoir-sampler = "0.0.1"
