[package]
name = "reservoir-sampler"
version = "0.1.0"
authors = ["huangjj27"]
edition = "2018"
license = "LGPL-3.0-or-later"
descrption = "a simple Reservoir sampling algorithm that provides equal probability to each position when samples are less then the reservoir's size."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "simple_reservoir"

[dev-dependencies]
rand = "0.8"
