[package]
name = "reservoir-sampler"
version = "0.1.0"
authors = ["huangjj27"]
edition = "2018"
license = "LGPL-3.0-or-later"
description = "A trait API that A sampler using the Reservoir algorithm should implement."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8"
